practica 2/nat/iptables
# Generated by iptables-save v1.4.21 on Tue Mar  9 17:24:16 2021
*filter
:INPUT DROP [1047:120439]
:FORWARD ACCEPT [33234:25343212]
:OUTPUT DROP [86:6280]
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A INPUT -i enp0s3 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o enp0s3 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
COMMIT
# Completed on Tue Mar  9 17:24:16 2021
# Generated by iptables-save v1.4.21 on Tue Mar  9 17:24:16 2021
*nat
:PREROUTING ACCEPT [1448:161003]
:INPUT ACCEPT [159:15903]
:OUTPUT ACCEPT [94:6864]
:POSTROUTING ACCEPT [2:157]
-A POSTROUTING -o tap0 -j MASQUERADE
COMMIT
# Completed on Tue Mar  9 17:24:16 2021
